# MLHC

./: .gitignore  AGENTS.md  Makefile  README.md  REPRODUCE.md  pyproject.toml
Paper Template/: full-paper-template.tex  jmlr.cls  sample.bib
paper/: assets_manifest.json  final_results_summary.md  final_results_table.csv  results_snapshot.md
paper/tables/: bold_preview.tex  encode_preview.tex  group_counts.tex  model_metrics_bold.tex  model_metrics_encode.tex  skintone_distribution.tex  table1_cohort.tex  table_a_regression.tex  table_c_occult.tex  tradeoff_summary_bold.tex
paper_build/: main.tex  refs.bib
paper_build/tables/: bold_preview.tex  encode_preview.tex  encode_race_vs_skintone.tex  encode_race_vs_skintone_main.tex  group_counts.tex  model_metrics_bold.tex  model_metrics_encode.tex  repeated_splits_summary_bold.tex  skintone_distribution.tex  table1_cohort.tex  table2_bold_models.tex  table3_encode_models.tex  table_b_conformal.tex  tradeoff_summary_bold.tex  tradeoff_summary_encode.tex
scripts/: 00_env_check.py  01_manifest.py  02_inspect_bold.py  03_inspect_encode.py  04_build_pairs_encode.py  04a_inspect_encode_measurements.py  05_build_dataset_bold.py  06_build_dataset_encode.py  07_train_models.py  08_evaluate.py  09_make_figures_tables.py  10_make_paper_assets.py  11_posthoc_reports.py  12_sync_paper_build.py  run_all.sh  run_all_slurm.sh
src/config/: features.yaml  modeling.yaml  paths.yaml
tests/: test_bold_schema.py  test_encode_pairing.py  test_encode_schema.py  test_manifest.py  test_metrics.py  test_skintone_parsing.py
(+15 files in other folders)
