[project]
name = "mlhc-bold-encode"
version = "0.1.0"
description = "Reproducible pipeline for BOLD + ENCoDE analysis"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "pyarrow>=12.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
